# lightgrep_wrapper

./: .gitignore  COPYING  Makefile.am  README.md  configure.ac
doc/: callback.md
doc/doxygen/: Doxyfile
m4/: lightgrep_wrapper_cflags.m4
src/: Makefile.am  lightgrep_wrapper.cpp  lightgrep_wrapper.hpp  lw.cpp  read_buffer.cpp
test/: Makefile.am  tests.cpp
